Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}
          - add use of the Verbatim transformer to the weaver plugin bundle

0.100     2015-07-19 05:16:43Z
          - ensure all static install configurations are correct and
            consistent with each other
          - fix test that breaks if [RewriteVersion] is not at least version
            0.010

0.099     2015-07-18 03:44:44Z
          - bump prereq on [Test::Pod::No404s], to get prereq injection
          - upgrade [MojibakeTests], to get the file in xt/author and prereq
            injection
          - pass add_tarball_name = 0 to [RewriteVersion(::*)?] configs
          - set x_static_install flag in some distributions

0.098     2015-06-29 03:31:18Z
          - fix test that broke due to [RewriteVersion::Transitional] 0.006

0.097     2015-06-25 04:11:43Z
          - bump up prereq for [Test::EOL], for the 'finders' option
          - fix bash commands when building in a directory with whitespace
          - also copy INSTALL from the build and commit it to the repository
          - new =type collector in weaver bundle

0.096     2015-06-16 02:04:57Z
          - fix Module::Build::Tiny prohibition to also work with
            [ModuleBuildTiny::Fallback]
          - add header and footer regions to podweaver bundle, which is very
            useful for adding directives before any content

0.095     2015-06-15 03:37:11Z
          - switch to my weaver plugin bundle in newly-minted distributions;
            preventing older sharedir installs from interfering
          - always copy ppport.h from release back to the repository
          - define weaver plugin bundle config in a more compact and readable
            syntax
          - do not permit Module::Build::Tiny to be used as an installer if
            perl 5.006 compatibility is desired
          - remove use of build_warnings option in [Git::Check] (added in
            0.074)

0.094     2015-06-01 03:30:00Z