@@ -18,7 +18,7 @@ Dist::Zilla::Plugin::FileFinder::ByName = 0
 Dist::Zilla::Plugin::Git::GatherDir = 2.016
 Dist::Zilla::Plugin::MetaYAML = 0
 Dist::Zilla::Plugin::MetaJSON = 0
-Dist::Zilla::Plugin::License = 0
+Dist::Zilla::Plugin::License = 5.038
 Dist::Zilla::Plugin::Readme = 0
 Dist::Zilla::Plugin::Manifest = 0
 Dist::Zilla::Plugin::GenerateFile::ShareDir = 0
