@@ -29,6 +29,8 @@ type = pod
 location = build
 
 [License]
+:version = 5.038
+filename = LICENCE
 
 [GenerateFile::ShareDir]
 -dist = Dist-Zilla-PluginBundle-Author-ETHER
