@@ -24,7 +24,7 @@ x_IRC = irc://irc.perl.org/#distzilla
 x_MailingList = http://dzil.org/#mailing-list
 
 [Prereqs]
-Dist::Zilla = 4.300039  ; v2 meta-compliant license field
+Dist::Zilla = 4.300039  ; v2 meta-compliant licence field
 RESOURCES
 : '') }}
 [Prereqs / DevelopRequires]
